increased size of font on landing page, fixed signup/login error display, fixed grid overflow hidden issues on booksearch page

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Helvetica Neue";
   background-color: rgba(227,227, 222, .25);
-  color: rgb(114, 112, 112)
+  color: rgb(114, 112, 112);
 }
 
 #margin-left {
